// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format API formatDate() options falls back and warns on invalid Intl.DateTimeFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatDate() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;

exports[`format API formatMessage() fallbacks formats \`defaultMessage\` when message has a syntax error 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks formats \`defaultMessage\` when message has missing values 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks returns \`defaultMessage\` source when formatting errors and missing message 1`] = `
Array [
  "MISSING_TRANSLATION",
  "FORMAT_ERROR",
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks returns message \`id\` when message and \`defaultMessage\` are empty 1`] = `
Array [
  "MISSING_TRANSLATION",
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks returns message \`id\` when message and \`defaultMessage\` are missing 1`] = `
Array [
  "MISSING_TRANSLATION",
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks returns message source when formatting error and missing \`defaultMessage\` 1`] = `
Array [
  "FORMAT_ERROR",
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() fallbacks returns message source when message and \`defaultMessage\` have formatting errors 1`] = `
Array [
  "FORMAT_ERROR",
  "FORMAT_ERROR",
  "FORMAT_ERROR",
]
`;

exports[`format API formatMessage() formats rich text messages w/ wrapRichTextChunksInFragment 1`] = `
<React.Fragment>
  rich 
  <b>
    text
  </b>
</React.Fragment>
`;

exports[`format API formatMessage() formats rich text messages w/o wrapRichTextChunksInFragment 1`] = `
Array [
  "rich ",
  <b>
    text
  </b>,
]
`;

exports[`format API formatNumber() options falls back and warns on invalid Intl.NumberFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatNumber() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;

exports[`format API formatRelativeTime() falls back and warns when no value is provided 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatRelativeTime() options falls back and warns on invalid IntlRelativeFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatRelativeTime() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;

exports[`format API formatTime() options falls back and warns on invalid Intl.DateTimeFormat options 1`] = `
Array [
  "FORMAT_ERROR",
]
`;

exports[`format API formatTime() options handles missing named formats and warns 1`] = `
Array [
  "UNSUPPORTED_FORMATTER",
]
`;
